# learnify-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml  release.yaml
config/: model_config.py
learnify_ml/artifacts/model/: model_evaluation_results.csv
learnify_ml/src/: data_preprocessing.py  model_training.py
learnify_ml/training_pipeline/: training_pipeline.py
src/: data_preprocessing.py  model_training.py
training_pipeline/: training_pipeline.py
utils/: common_functions.py
